--- a/clustering/flaskapp/templates/coms_clusters.html
+++ b/clustering/flaskapp/templates/coms_clusters.html
@@ -1,8 +1,14 @@
 <html>
-
 <head>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-<!-- <meta http-equiv="refresh" content="60"/>  -->
+<!--  <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0" />
+ <meta http-equiv="cache-control" content="max-age=0" />
+ <meta http-equiv="expires" content="0" />
+ <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+ <meta http-equiv="pragma" content="no-cache" /> -->
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 <style>
 .clusterData{
@@ -17,6 +23,9 @@
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 5;
+}
+#form{
+	float: right;
 }
 .spaceBelow{
     margin-bottom: 20;
@@ -51,7 +60,7 @@
 			// console.log(data);
     			for(d in data){
     				if(d === "Document count"){
-    					var row = "<div class=\"row\" id=\"header\"><div class=\"col-md-9\"><div id=\"totalDocCount\"> Total Document Count: " + data[d] + "</div></div><div class='col-md-3'><form action='/recluster/' method='post'><button name='reclusterBtn' id='reclusterBtn' type='submit'>Recalculate Clusters</button></form></div></div><div class='row'><div class='col-md-12' id='clusterSummaries'><div>Overview: </div></div></div>";
+    					var row = "<div class=\"row\" id=\"header\"><div class=\"col-md-3\"><div id=\"totalDocCount\"> Total Document Count: " + data[d] + "</div></div><div class='col-md-9'><form action='{{ url_for('recluster') }}' method='post' id='form' name='stopwordInput'>Add Stop Word: <input type='text' name='addStopword'> Remove Stop Word: <input type='text' name='removeStopword'> <button name='reclusterBtn' id='reclusterBtn' type='submit'>Recalculate Clusters</button></form><br>{% block content %}teapot{% endblock %}</div></div><div class='row'><div class='col-md-12' id='clusterSummaries'><div>Overview: </div></div></div>";
     					$(".container").append(row);
     					// Append 'summaries' of clusters to header
     					var numClusters = 0;
