--- a/clustering/flaskapp/templates/added_stopwords.html
+++ b/clustering/flaskapp/templates/added_stopwords.html
@@ -1,8 +1,4 @@
 {% extends "coms_clusters.html" %}
 {% block content %}
-  <ul>
-    {% for n in stop_words %}
-    <li>{{n}}</li>
-    {% endfor %}
-  </ul>
+<p>please print</p>
 {% endblock %}
